# studdy-buddy

./: CLAUDE.md  Cargo.toml  DESIGN.md  README.md  TODO.md  studybuddy.toml.example
.claude/: settings.json
docs/: README.md  api.md  architecture.md  cli.md  llm.md
src/: api.rs  cli.rs  client.rs  config.rs  error.rs  ingest.rs  lib.rs  main.rs  model.rs  scheduler.rs  watcher.rs  wire.rs
src/llm/: mod.rs  ollama.rs  prompt.rs  retry.rs
src/store/: file.rs  memory.rs  mod.rs
tests/: api.rs  cli.rs  client.rs  llm_ollama.rs  store.rs  watcher.rs
tests/common/: mod.rs
tests/fixtures/ingest/hidden_dirs/: normal.md
tests/fixtures/ingest/hidden_dirs/.obsidian/: config.md
tests/fixtures/ingest/mixed_extensions/: note.md  readme.txt
tests/fixtures/ingest/nested/: top.md
tests/fixtures/ingest/nested/sub/: inner.md
tests/fixtures/ingest/sample_vault/: dot_product.md  ignored.md  linear_algebra.md
web/: package-lock.json  vite.config.ts
web/src/: App.tsx  api.ts  types.ts
web/src/pages/: ReviewPage.tsx
